kubernetes/ide-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ads-system
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: nodegroup=ads-spot
