kubernetes/ide-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ide-deployment
  namespace: ads-system
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ide
  template:
    metadata:
      labels:
        app: ide
    spec:
      serviceAccountName: ide-admin
      nodeSelector:
        eks.amazonaws.com/nodegroup: ads-spot-t3-small
      tolerations:
        - key: dedicated
          operator: Equal
          value: ads
          effect: NoSchedule
      containers:
      - name: ide
        image: 248189947068.dkr.ecr.us-east-1.amazonaws.com/ide-code-server:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 1843Mi
          requests:
            memory: 512Mi
        command: ["/bin/sh"]
        args: 
        - -c
        - |
          cd /home/coder/workspace
          exec code-server --bind-addr 0.0.0.0:8080 --auth password .
        volumeMounts:
        - name: ebs-storage
          mountPath: /home/coder/workspace
      volumes:
      - name: ebs-storage
        persistentVolumeClaim:
          claimName: ide-ebs-pvc
